Update and rename index.html file.html to index.html

--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
       </div>
     </div>
   </section>
-
+<a href="https://sakib1234.gamer.gd/login.php" target="_blank">
+  Admin Login
+</a>
 </body>
 </html>
