--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
               </div>
 
               <button class="btn btn-primary w-100 fw-bold">Submit Payment</button>
+            <form id="paymentForm">
             </form>
           </div>
         </div>
@@ -224,16 +225,25 @@
 
     </div>
   </section>
+<section id="success" class="py-5 bg-success text-white text-center" style="display:none;">
 
-  <!-- Success Page -->
-  <section id="success" class="py-5 bg-success text-white text-center">
-    <div class="container">
-      <h1 class="fw-bold mb-3">Payment Submitted Successfully! 🎉</h1>
-      <p class="fs-5">Your payment proof and details have been received.</p>
-      <p class="fs-6">We will verify your transaction and deliver the diamonds shortly.</p>
-      <a href="#home" class="btn btn-light fw-bold mt-3">Return to Home</a>
-    </div>
-  </section>
+ <script>
+document.getElementById('paymentForm').addEventListener('submit', function(e){
+    e.preventDefault();
+
+    // Payment section hide
+    document.getElementById('manual-payment').style.display = 'none';
+
+    // Success section show
+    document.getElementById('success').style.display = 'block';
+
+    // Smooth scroll to success section
+    window.scrollTo({
+        top: document.getElementById('success').offsetTop,
+        behavior: 'smooth'
+    });
+});
+</script>
 
   <!-- Admin Panel -->
   <section id="admin-panel" class="py-5 bg-light">
@@ -274,3 +284,4 @@
 </a>
 </body>
 </html>
+
