--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
               </div>
 
               <button class="btn btn-primary w-100 fw-bold">Submit Payment</button>
+            
+              
             <form id="paymentForm">
             </form>
           </div>
@@ -224,8 +226,11 @@
       </div>
 
     </div>
+  
   </section>
-<section id="success" class="py-5 bg-success text-white text-center" style="display:none;">
+
+  
+  <section id="success" class="py-5 bg-success text-white text-center" style="display:none;">
 
  <script>
 document.getElementById('paymentForm').addEventListener('submit', function(e){
@@ -244,6 +249,8 @@ document.getElementById('paymentForm').addEventListener('submit', function(e){
     });
 });
 </script>
+
+  </section>
 
   <!-- Admin Panel -->
   <section id="admin-panel" class="py-5 bg-light">
@@ -284,4 +291,5 @@ document.getElementById('paymentForm').addEventListener('submit', function(e){
 </a>
 </body>
 </html>
+
 
