--- a/index.html
+++ b/index.html
@@ -291,5 +291,102 @@ document.getElementById('paymentForm').addEventListener('submit', function(e){
 </a>
 </body>
 </html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Diamond Bazar – Payment</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+
+<!-- Manual Payment Form -->
+<section id="manual-payment" class="py-5 bg-light">
+  <div class="container" style="max-width:550px;">
+    <h2 class="mb-4 text-center">Submit Your Payment</h2>
+
+    <form id="paymentForm">
+      <div class="mb-3">
+        <label class="form-label">Your Name</label>
+        <input id="name" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Free Fire UID</label>
+        <input id="uid" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Amount</label>
+        <input id="amount" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Phone Number</label>
+        <input id="number" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Transaction ID</label>
+        <input id="trxid" class="form-control" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Screenshot URL (optional)</label>
+        <input id="screenshot" class="form-control">
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">Submit Payment</button>
+    </form>
+  </div>
+</section>
+
+<!-- Success Message -->
+<section id="success" style="display:none;" class="py-5 text-center bg-success text-white">
+  <div class="container">
+    <h1 class="fw-bold">Payment Submitted Successfully 🎉</h1>
+    <p>Your payment details are received.</p>
+    <a href="index.html" class="btn btn-light">Return Home</a>
+  </div>
+</section>
+
+<!-- Firestore Submit Script -->
+<script type="module">
+import { db } from "./firebase.js";
+import { collection, addDoc, serverTimestamp } 
+  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+const paymentForm = document.getElementById("paymentForm");
+
+paymentForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const data = {
+    name: document.getElementById("name").value,
+    uid: document.getElementById("uid").value,
+    amount: document.getElementById("amount").value,
+    number: document.getElementById("number").value,
+    trxid: document.getElementById("trxid").value,
+    screenshot: document.getElementById("screenshot").value || null,
+    status: "Pending",
+    createdAt: serverTimestamp()
+  };
+
+  try {
+    await addDoc(collection(db, "orders"), data);
+
+    document.getElementById("manual-payment").style.display = "none";
+    document.getElementById("success").style.display = "block";
+
+    paymentForm.reset();
+
+  } catch (error) {
+    alert("Error submitting payment. Try again.");
+  }
+});
+</script>
+</body>
+</html>
+
 
 
