--- a/admin-panel.html
+++ b/admin-panel.html
@@ -23,51 +23,31 @@
   </div>
 
 <script type="module">
-import { auth } from "./firebase.js";
-import { onAuthStateChanged, signOut }
-  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
 import { db } from "./firebase.js";
-import { collection, getDocs }
-  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { collection, getDocs } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const ordersBody = document.getElementById("ordersBody");
+async function loadOrders() {
+  const tbody = document.getElementById("ordersBody");
+  tbody.innerHTML = ""; // clear table
 
-// Check login
-onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    window.location.href = "admin-login.html";
-    return;
-  }
+  const querySnapshot = await getDocs(collection(db, "orders"));
+  querySnapshot.forEach((doc) => {
+    const data = doc.data();
 
-  // Load orders
-  const snap = await getDocs(collection(db, "orders"));
-  ordersBody.innerHTML = "";
-
-  snap.forEach(doc => {
-    const d = doc.data();
-    const time = d.createdAt?.toDate?.().toLocaleString() || "";
-
-    ordersBody.innerHTML += `
+    const tr = `
       <tr>
-        <td>${d.name}</td>
-        <td>${d.uid}</td>
-        <td>${d.amount}</td>
-        <td>${d.number}</td>
-        <td>${d.trxid}</td>
-        <td>${d.screenshot ? `<a href="${d.screenshot}" target="_blank">View</a>` : "—"}</td>
-        <td>${d.status}</td>
-        <td>${time}</td>
+        <td>${data.playerId || "-"}</td>
+        <td>${data.amount || "-"}</td>
+        <td>${data.paymentMethod || "-"}</td>
+        <td>${data.transactionId || "-"}</td>
+        <td>${data.createdAt?.toDate ? data.createdAt.toDate().toLocaleString() : "-"}</td>
       </tr>
     `;
-  });
-});
 
-// Logout
-document.getElementById("logoutBtn").addEventListener("click", async () => {
-  await signOut(auth);
-  window.location.href = "admin-login.html";
-});
+    tbody.innerHTML += tr;
+  });
+}
+
+loadOrders();
 </script>
-</body>
-</html>
