--- a/index.html
+++ b/index.html
@@ -287,7 +287,26 @@ document.getElementById('paymentForm').addEventListener('submit', function(e){
     </div>
   </section>
 <a href="https://sakib1234.gamer.gd/login.php" target="_blank">
-  Admin Login
+  <footer class="text-center">
+  <div>© <span id="year"></span> Diamond Bazar. All Rights Reserved.</div>
+
+  <!-- নিচের ৩টা বাটন = লাস্টের বাটনগুলো -->
+  <div class="mt-3">
+    <!-- ১ নম্বর: Home -->
+    <a href="index.html" class="btn btn-outline-light btn-sm m-1">Home</a>
+
+    <!-- ২ নম্বর: Payment Page (তোমার ২য় HTML ফাইল, নাম হবে payment.html) -->
+    <a href="payment.html" class="btn btn-warning btn-sm m-1" target="_blank">Manual Payment</a>
+
+    <!-- ৩ নম্বর: Admin Website (তোমার login.php) -->
+    <a href="https://sakib1234.gamer.gd/login.php" class="btn btn-danger btn-sm m-1" target="_blank">
+      Admin Login
+    </a>
+  </div>
+</footer>
+
+</body>
+</html>
 </a>
 </body>
 </html>
@@ -387,6 +406,7 @@ paymentForm.addEventListener("submit", async (e) => {
 </script>
 </body>
 </html>
+
 
 
 
