Add admin-panel and upload-and-submit script

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Admin Panel</title>
+  <title>Admin Panel - Orders</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
   <div class="container py-4">
     <h2 class="mb-4">All Payment Orders</h2>
@@ -13,41 +13,68 @@
     <table class="table table-bordered">
       <thead class="table-dark">
         <tr>
-          <th>Name</th><th>UID</th><th>Amount</th><th>Phone</th><th>TrxID</th><th>Screenshot</th><th>Status</th><th>Time</th>
+          <th>Name</th>
+          <th>UID</th>
+          <th>Amount</th>
+          <th>Phone</th>
+          <th>TrxID</th>
+          <th>Screenshot</th>
+          <th>Status</th>
+          <th>Time</th>
         </tr>
       </thead>
       <tbody id="ordersBody"></tbody>
     </table>
 
-    <button id="logoutBtn" class="btn btn-secondary">Logout</button>
+    <a href="index.html" class="btn btn-secondary">Back to Site</a>
   </div>
 
 <script type="module">
 import { db } from "./firebase.js";
-import { collection, getDocs } 
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { collection, query, orderBy, onSnapshot } 
+  from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-async function loadOrders() {
-  const tbody = document.getElementById("ordersBody");
-  tbody.innerHTML = ""; // clear table
+const tbody = document.getElementById('ordersBody');
 
-  const querySnapshot = await getDocs(collection(db, "orders"));
-  querySnapshot.forEach((doc) => {
-    const data = doc.data();
+// Query orders ordered by createdAt descending
+const q = query(collection(db, 'orders'), orderBy('createdAt', 'desc'));
+
+onSnapshot(q, (snapshot) => {
+  tbody.innerHTML = ''; // clear table
+  snapshot.forEach(doc => {
+    const data = doc.data() || {};
+
+    const screenshotCell = data.screenshot 
+      ? `<a href="${escapeHtml(data.screenshot)}" target="_blank" rel="noopener">View</a>` 
+      : '-';
+
+    const time = data.createdAt?.toDate ? data.createdAt.toDate().toLocaleString() : '-';
 
     const tr = `
       <tr>
-        <td>${data.playerId || "-"}</td>
-        <td>${data.amount || "-"}</td>
-        <td>${data.paymentMethod || "-"}</td>
-        <td>${data.transactionId || "-"}</td>
-        <td>${data.createdAt?.toDate ? data.createdAt.toDate().toLocaleString() : "-"}</td>
+        <td>${escapeHtml(data.name || '-')}</td>
+        <td>${escapeHtml(data.uid || '-')}</td>
+        <td>${escapeHtml(data.amount || '-')}</td>
+        <td>${escapeHtml(data.number || '-')}</td>
+        <td>${escapeHtml(data.trxid || '-')}</td>
+        <td>${screenshotCell}</td>
+        <td>${escapeHtml(data.status || '-')}</td>
+        <td>${time}</td>
       </tr>
     `;
-
-    tbody.innerHTML += tr;
+    tbody.insertAdjacentHTML('beforeend', tr);
   });
-}
+});
 
-loadOrders();
+// small helper to avoid breaking the page if strings contain HTML
+function escapeHtml(str) {
+  return String(str)
+    .replace(/&/g, '&amp;')
+    .replace(/</g, '&lt;')
+    .replace(/>/g, '&gt;')
+    .replace(/"/g, '&quot;')
+    .replace(/'/g, '&#039;');
+}
 </script>
+</body>
+</html>
