--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
-            <h3 class="fw-bold">60 Diamonds</h3>
+            <h3 class="fw-bold">Weekly Membership</h3>
             <p class="text-muted">Starter Pack</p>
-            <h4 class="fw-bold">$0.99</h4>
+            <h4 class="fw-bold">$160TAKA</h4>
             <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="60">Buy Now</button>
           </div>
         </div>
@@ -59,9 +59,9 @@
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
-            <h3 class="fw-bold">300 Diamonds</h3>
+            <h3 class="fw-bold">Weekly Lite Membership</h3>
             <p class="text-muted">Most Popular</p>
-            <h4 class="fw-bold">$4.49</h4>
+            <h4 class="fw-bold">$50TAKA</h4>
             <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="300">Buy Now</button>
           </div>
         </div>
@@ -70,9 +70,9 @@
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
-            <h3 class="fw-bold">720 Diamonds</h3>
+            <h3 class="fw-bold">Monthly Membership</h3>
             <p class="text-muted">Value Pack</p>
-            <h4 class="fw-bold">$9.99</h4>
+            <h4 class="fw-bold">$790TAKA</h4>
             <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="720">Buy Now</button>
           </div>
         </div>
