--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h3 class="fw-bold">Weekly Membership</h3>
             <p class="text-muted">Starter Pack</p>
             <h4 class="fw-bold">$160TAKA</h4>
-            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="60">Buy Now</button>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="Weekly Membership">Buy Now</button>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
             <h3 class="fw-bold">Weekly Lite Membership</h3>
             <p class="text-muted">Most Popular</p>
             <h4 class="fw-bold">$50TAKA</h4>
-            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="300">Buy Now</button>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="Weekly Lite Membership">Buy Now</button>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
             <h3 class="fw-bold">Monthly Membership</h3>
             <p class="text-muted">Value Pack</p>
             <h4 class="fw-bold">$790TAKA</h4>
-            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="720">Buy Now</button>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="Monthly Membership">Buy Now</button>
           </div>
         </div>
       </div>
