--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
           </div>
         </div>
       </div>
-
+      <div class="col-md-4 col-12">
+        <div class="card package-card shadow-sm">
+          <div class="card-body text-center">
+            <h3 class="fw-bold">25 Diamonds</h3>
+            <p class="text-muted">Starter Pack</p>
+            <h4 class="fw-bold">$25TAKA</h4>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="25 Diamonds">Buy Now</button>
+          </div>
+        </div>
+      </div>
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
