--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="25 Diamonds">Buy Now</button>
           </div>
         </div>
-      </div>
+      </div> 
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
@@ -75,7 +75,16 @@
           </div>
         </div>
       </div>
-
+        <div class="col-md-4 col-12">
+        <div class="card package-card shadow-sm">
+          <div class="card-body text-center">
+            <h3 class="fw-bold">50Diamonds</h3>
+            <p class="text-muted">Starter Pack</p>
+            <h4 class="fw-bold">$50TAKA</h4>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="50 Diamonds">Buy Now</button>
+          </div>
+        </div>
+      </div>                                                                                                                       
       <div class="col-md-4 col-12">
         <div class="card package-card shadow-sm">
           <div class="card-body text-center">
@@ -86,7 +95,16 @@
           </div>
         </div>
       </div>
-
+      <div class="col-md-4 col-12">
+        <div class="card package-card shadow-sm">
+          <div class="card-body text-center">
+            <h3 class="fw-bold">115Diamonds</h3>
+            <p class="text-muted">Starter Pack</p>
+            <h4 class="fw-bold">$90TAKA</h4>
+            <button class="btn btn-primary mt-2 w-100 buy-btn" data-pack="50 Diamonds">Buy Now</button>
+          </div>
+        </div>
+      </div>              
     </div>
   </div>
 </section>
