--- a/index.html
+++ b/index.html
@@ -248,11 +248,6 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Amount</label>
-        <input id="amount" name="amount" class="form-control" required>
-      </div>
-
-      <div class="mb-3">
         <label class="form-label">Phone Number</label>
         <input id="number" name="number" class="form-control" required>
       </div>
@@ -308,8 +303,8 @@
     </div>
 
     <div class="alert alert-info mt-4">
-      All submitted payment details will be automatically sent to:<br>
-      <strong>shsakib503@gmail.com</strong>
+      Customer service Whatsapp:<br>
+      <strong>01604041687</strong>
     </div>
   </div>
 </section>
