--- a/index.html
+++ b/index.html
@@ -240,9 +240,14 @@
         <label class="form-label">Free Fire UID</label>
         <input id="uid" name="uid" class="form-control" required>
       </div>
+       <div class="mb-3">
+        <label class="form-label">Selected Package</label>
+        <!-- This will be auto-filled when the user clicks Buy or when completing inline payment -->
+        <input id="package_manual" name="package" class="form-control" readonly>
+      </div>
 
       <div class="mb-3">
-        <label class="form-label">Selected Package</label>
+        <label class="form-label">Amount</label>
         <!-- This will be auto-filled when the user clicks Buy or when completing inline payment -->
         <input id="package_manual" name="package" class="form-control" readonly>
       </div>
