--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
 
       <div class="mb-3">
         <label class="form-label">Amount</label>
-        <!-- This will be auto-filled when the user clicks Buy or when completing inline payment -->
-        <input id="package_manual" name="package" class="form-control" readonly>
+       <input id="number" name="number" class="form-control" required>
       </div>
 
       <div class="mb-3">
