--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
       </div>
        <div class="mb-3">
         <label class="form-label">Selected Package</label>
-        <!-- This will be auto-filled when the user clicks Buy or when completing inline payment -->
-        <input id="package_manual" name="package" class="form-control" readonly>
+        <input id="package_manual" name="package" class="form-control" required>
       </div>
 
       <div class="mb-3">
